app: add-google-depl

--- a/apps/dev/google-deployment.yaml
+++ b/apps/dev/google-deployment.yaml
@@ -18,9 +18,9 @@ spec:
       volumes:
       - name: vol
         emptyDir: {}
-      serviceAccountName: jenkins
+      serviceAccountName: defalut
       containers:
-        - image: replace
+        - image: thecodingadventure/googleservice:4c402011a4fabf54432f5611eb7c09579354284c
           name: googleservice-container
           volumeMounts:
           - mountPath: /tmp
