--- a/infrastructure/dev/application.yaml
+++ b/infrastructure/dev/application.yaml
@@ -9,7 +9,7 @@ spec:
   source:
     repoURL: https://github.com/ekulfier/gitops-vizelog.git
     targetRevision: HEAD
-    path: /apps/dev
+    path: apps/dev
   destination:
     server: https://0CB2238B374B29AB00ACFCAC02C008E8.gr7.ap-southeast-1.eks.amazonaws.com
     namespace: dev-vizelog
