--- a/apps/dev/google-deployment.yaml
+++ b/apps/dev/google-deployment.yaml
@@ -6,6 +6,7 @@ metadata:
   name: googleservice-depl
 spec:
   replicas: 2
+  revisionHistoryLimit: 0
   selector:
     matchLabels:
       app: googleservice
