--- a/environments/staging/Jenkinsfile
+++ b/environments/staging/Jenkinsfile
@@ -1,6 +1,11 @@
 pipeline {
 	agent any
 
+  environment {
+    deploymentName = "googleservice-depl"
+		APP_NAME="thecodingadventure/googleservice"
+		IMAGE_TAG = "${GIT_COMMIT}"
+  }
 
   stages {
     stage('clean workspace') {
@@ -17,34 +22,25 @@ pipeline {
 
     stage('Integration Tests - Staging') {
       steps {
-        script {
-          try {
-            withKubeConfig([credentialsId: 'kubeconfig']) {
-              sh "bash integration-test.sh"
+        dir("environments/staging") {
+          script {
+            try {
+              withKubeConfig([credentialsId: 'kubeconfig']) {
+                sh "bash integration-test.sh"
+              }
+            } catch (e) {
+              // reversioning to previous commit
+              git branch: 'staging', credentialsId: 'github', url: 'https://github.com/ekulfier/gitops-vizelog'
+              def previousCommit = sh(returnStdout: true, script: 'git rev-parse HEAD^').toString.trim()
+              withCredentials([gitUsernamePassword(credentialsId: 'github', gitToolName: 'Default')]) {
+                sh "git checkout ${previousCommit}"
+              }
+              throw e
             }
-          } catch (e) {
-            // reversioning to previous commit
-            git branch: 'staging', credentialsId: 'github', url: 'https://github.com/ekulfier/gitops-vizelog'
-            def previousCommit = sh(returnStdout: true, script: 'git rev-parse HEAD^').trim()
-            withCredentials([gitUsernamePassword(credentialsId: 'github', gitToolName: 'Default')]) {
-              sh "git checkout ${previousCommit}"
-            }
-            throw e
           }
         }
       }
     }
-
-
-    stage('OWASP ZAP - DAST') {
-      steps {
-        withKubeConfig([credentialsId: 'kubeconfig']) {
-          sh 'bash zap.sh'
-        }
-      }
-    }
-
-  }
 
     stage('Prompte to PROD?') {
       steps {
@@ -54,28 +50,8 @@ pipeline {
       }
     }
 
-    stage('K8S CIS Benchmark') {
-      steps {
-        script {
-
-          parallel(
-            "Master": {
-              sh "bash cis-master.sh"
-            },
-            "Etcd": {
-              sh "bash cis-etcd.sh"
-            },
-            "Kubelet": {
-              sh "bash cis-kubelet.sh"
-            }
-          )
-
-        }
-      }
-    }
-
-	  stage('K8S Deployment - PROD') {
-      
+    stage('K8S Deployment - PROD') {
+        
       stages {
         stage("Checkout from SCM") {
           steps {
@@ -111,14 +87,47 @@ pipeline {
           }
         }
 
-        stage()
+        stage("Rollout Status") {
+          steps {
+            dir("environments/staging") {
+              script {
+                // reversioning to previous commit
+                git branch: 'prod', credentialsId: 'github', url: 'https://github.com/ekulfier/gitops-vizelog'
+                def previousCommit = sh(returnStdout: true, script: 'git rev-parse HEAD^').toString.trim()
+                withKubeConfig([credentialsId: 'kubeconfig']) {
+                  withCredentials([gitUsernamePassword(credentialsId: 'github', gitToolName: 'Default')]) {
+                    sh '''
+                      #!/bin/bash
+                      sleep 60s
+
+                      if [[ $(kubectl -n prod-vizelog rollout status deploy ${deploymentName} --timeout 10s) != *"successfully rolled out"* ]]; 
+                      then     
+                        echo "Deployment ${deploymentName} Rollout has Failed"
+                        git checkout ${previousCommit}
+                        exit 1;
+                      else
+                        echo "Deployment ${deploymentName} Rollout is Success"
+                      fi
+                    ''' 
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     }
-  
-  
   }
 
   post {
-     
+    always {
+      emailext attachLog: true,
+        subject: "'${currentBuild.result}'",
+        body: "Project: ${env.JOB_NAME}<br/>" +
+            "Build Number: ${env.BUILD_NUMBER}<br/>" +
+            "URL: ${env.BUILD_URL}<br/>",
+        to: 'the.coding.nothingdev@gmail.com',                          
+        attachmentsPattern: 'trivyfs.txt,trivyimage.txt'
+    }
   }
 }
