--- a/apps/staging/google-service.yaml
+++ b/apps/staging/google-service.yaml
@@ -8,7 +8,9 @@ spec:
   selector:
     app: googleservice
   ports:
-    - name: youtubeservice
+    - name: googleservice
       protocol: TCP
       port: 3000
       targetPort: 3000
+  type: NodePort
+    
