--- a/environments/staging/Jenkinsfile
+++ b/environments/staging/Jenkinsfile
@@ -36,8 +36,7 @@ pipeline {
               git branch: 'main', credentialsId: 'github', url: 'https://github.com/ekulfier/gitops-vizelog'
               def previousCommit = sh(returnStdout: true, script: 'git rev-parse HEAD^').trim()
               withCredentials([gitUsernamePassword(credentialsId: 'github', gitToolName: 'Default')]) {
-                sh "git revert ${previousCommit}"
-                sh "git push origin main"
+                sh "git checkout ${previousCommit}"
               }
               throw e
             }
@@ -107,8 +106,7 @@ pipeline {
                       if [[ $(kubectl -n prod-vizelog rollout status deploy ${deploymentName} --timeout 10s) != *"successfully rolled out"* ]]; 
                       then     
                         echo "Deployment ${deploymentName} Rollout has Failed"
-                        git revert ${previousCommit}
-                        git push origin
+                        git checkout ${previousCommit}
                         exit 1;
                       else
                         echo "Deployment ${deploymentName} Rollout is Success"
